@@ -1,6 +1,8 @@
 ver 0.20.19 (not yet released)
 * protocol
   - validate absolute seek time, reject negative values
+* database
+  - proxy: fix "search already in progress" errors
 * input
   - mms: fix lockup bug and a crash bug
 * decoder
